backend/kubernetes/overlays/production/container-resources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convomark
spec:
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 500Mi
            cpu: 500m
