backend/kubernetes/overlays/production/replica-count.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convomark
spec:
  replicas: 2
